--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,21 @@
                     <groupId>commons-logging</groupId>
                 </exclusion>
             </exclusions>
+
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <artifactId>commons-logging</artifactId>
+            <groupId>commons-logging</groupId>
+            <version>1.1.3</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
